[UPDATE] user entity, node script

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,7 @@
 PORT=3000
 
 # DB Connection
+DB_HOST="localhost" # or whatever you prefer
+DB_NAME="YOUR_DB_NAME"
 DB_USERNAME="YOUR_MYSQL_USERNAME"
 DB_PASSWORD="YOUR_MYSQL_PASSWORD"
