--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ DB_HOST="localhost" # or whatever you prefer
 DB_NAME="YOUR_DB_NAME"
 DB_USERNAME="YOUR_MYSQL_USERNAME"
 DB_PASSWORD="YOUR_MYSQL_PASSWORD"
+
+# JWT key
+JWT_SECRET_KEY="YOUR_SECRET_KEY"
