[ADD] nodemailer dependecy and configuration for nodemailer

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ DB_PASSWORD="YOUR_MYSQL_PASSWORD"
 
 # JWT key
 JWT_SECRET_KEY="YOUR_SECRET_KEY"
+
+# Nodemailer configuration
+SERVICE="gmail"
+SERVER_SMTP="smtp.gmail.com"
+EMAIL_SMTP="YOUR_MAIL_ADDRESS"
+PASS_SMTP="YOUR_MAIL_PASSWORD"
