--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.15",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
